# SummytCode_300

./: .gitignore  Especificacion_Tecnica_PLC_IDE.md  README.md  ROADMAP.md  package-lock.json  package.json
boards/: README.md  agrupacion_board_template.json  arduino_uno.json
compiler-core/: ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json
compiler-core/src/: index.ts
compiler-core/src/ast/: types.ts
compiler-core/src/codegen/: c_generator.ts  types.ts
compiler-core/src/ladder/: arbol_translator.ts  ladder_translator.ts  network_tree.ts  types.ts  validar_rung.ts
compiler-core/tests/: arbol_translator.test.ts  c_generator.test.ts  flujo.test.ts  ladder_translator.test.ts  network_tree.test.ts  st_parser.test.ts  validar_rung.test.ts
examples/: enclavamiento_3_ramas.plcproj  plc_program.c
firmware-runtime/: README.md
firmware-runtime/avr/: Makefile  README_compilacion.md  hal_avr.c  hal_avr.h  main.c  plc_runtime.c  plc_runtime.h
mcu_families/: README.md  avr_atmega328.json  esp32.json  stm32f1.json
src/: README.md  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  serial.rs
src/components/: EditMenu.tsx  FileMenu.tsx  SyncWarningBanner.tsx  Toolbar.tsx  VariablesPanel.tsx
src/main/: main.ts  preload.ts
src/monitor/: ConsolePanel.tsx
src/project/: ProjectPanel.tsx
src/renderer/: App.tsx  index.html  index.tsx
src/shared/: syncUtils.ts  types.ts
(+17 files in other folders)
