[package]
name = "plc-ide"
version = "0.1.0"
description = "IDE de programación PLC para MCU"
authors = ["Agrupación"]
edition = "2021"
rust-version = "1.60"

# Ver más claves en https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-title", "dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
tokio = { version = "1", features = ["sync"] }

[features]
# Esta feature la usa `tauri build` para el binario de producción con protocolo
# personalizado; en desarrollo se sirve el frontend desde el dev server de Vite.
custom-protocol = ["tauri/custom-protocol"]
